2009-01-26  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: Handled invalid endpos.

2009-01-23  Mike Krüger  <mkrueger@novell.com>

	* Parser/NRefactoryParser.cs: Corrected delegate location.

	* Gui/CSharpAmbience.cs: Attribute postfix no longer print when
	outputting attributes.

2009-01-21  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs:
	* Gui/CSharpTextEditorCompletion.cs: fixed 'Bug 464788 - Variable shows
	up twice in completion list.'.

2009-01-21  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: fixed 'Bug 464787 - completion doesn't
	update fast enough'.

2009-01-20  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs:
	* Parser/NRefactoryParser.cs: Added support for explicit events. Fixing
	bug "Bug 467507 - No completion of base members inside explicit
	events".

2009-01-16  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: Handled theoretical null ref exception (But
	I wasn't able to produce a test case). 

2009-01-16  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: fixed "Bug 466694 - Generic type parameters
	missing from completion".

2009-01-16  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: Fixed 'Bug 466692 - Missing
	completion for return/break keywords after yield'.

2009-01-15  Mike Krüger  <mkrueger@novell.com>

	* Gui/ResolveVisitor.cs: fixed 'Bug 466337 - Incorrect intelisense for
	class attribute'.

2009-01-15  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: fixed "Bug 466329 - Autocomplete
	doesn't activate with "_"".

2009-01-15  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpAmbience.cs: worked on csharpambience markup.

2009-01-15  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: fixed 'Bug 466149 - Code completion
	activates inside a string.'.

2009-01-15  Mike Krüger  <mkrueger@novell.com>
